# AEBench

./: .gitignore  Dockerfile  README.md  WHY.md  aebench.toml  cases.json  commit-shas.txt  pyproject.toml
.github/workflows/: python-pr-checks.yml
cases/asplos24_crocus/: case.toml
cases/asplos24_gaia/: case.toml
cases/asplos24_golf/: artifact  case.toml
cases/asplos24_rtl_repair/: .gitignore  case.toml
cases/asplos25_cinnamon/: case.toml
cases/asplos25_golf/: case.toml
cases/asplos25_herbie/: case.toml
cases/atc25_koala/: case.toml
cases/atc25_ppipe/: case.toml
cases/eurosys25_depsurf/: case.toml
cases/eurosys25_egwalker/: case.toml
cases/osdi24_anvil/: case.toml
cases/osdi24_eet/: __init__.py  case.toml
cases/osdi24_kondo/: case.toml
cases/osdi24_pcs/: case.toml
cases/osdi25_bpftime/: case.toml  speedup_ratios.paper.json
cases/osdi25_neutrino/: case.toml
cases/osdi25_verified_storage/: case.toml
cases/sosp23_acto/: case.toml
cases/sosp24_wasabi/: case.toml
docs/: README.md
docs/architecture/: glossary.md  oracle.md  runtime.md
docs/howtos/: add_agent.md  add_case.md  run_benchmark.md  testing.md
src/: cli.py  config.py  constants.py  file.txt  git.py  log.py  models.py  project_config.py  prompting.py  run_control.py  settings.py  sources.py  task_loader.py  utils.py
src/aebench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/artevalbench/: __init__.py  app.py  config.py  drivers.py  events.py  file.txt  git.py  main.py  models.py  my_commands.txt  prompting.py  runner.py  runtimes.py  sources.py  utils.py
src/console/: __init__.py  dashboard.py  dashboard_display.py  dashboard_render.py  dashboard_state.py  dashboard_widgets.py  tui.py
src/evaluator/: __init__.py  constants.py  loader.py  registry.py
src/runtime/: __init__.py  backend.py  benchmark_runner.py  bootstrap.py  case_runner.py  (+7 more)
tests/: conftest.py  test_aggregation.py  test_discovery.py  test_loader.py  test_oracle_execution.py  test_prompting.py  test_requirements.py  test_scoring.py
(+388 files in other folders)
