[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "aebench"
version = "0.1.0"
description = "Bundle-native artifact-evaluation benchmark runner with isolated Docker execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "claude-agent-sdk==0.1.24",
  "anyio>=4.8.0",
  "aiohttp>=3.9.0",
  "docker>=7.1.0",
  "dulwich>=0.22.8",
  "Jinja2>=3.1.6",
  "mcp>=1.26.0,<2",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "rich>=14.0.0",
  "swe-rex>=1.2.1",
  "structlog>=25.4.0",
  "tenacity>=9.0.0",
  "textual>=1.0.0",
  "tomli>=2.2.1; python_version < '3.11'",
  "typer>=0.16.0",
]

[project.scripts]
aebench = "cli:cli_main"
aebench-runner = "runner:docker_main"
aebench-mcp-server = "mcp.server:stdio_main"

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "ruff>=0.11.0",
  "mypy>=1.11.0",
  "pyrefly",
  "pyre-check==0.9.25",
  "pytest>=9.0.2",
]

[tool.uv]
default-groups = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E101", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = [
  "sanity: fast local sanity coverage without external services",
  "docker_sanity: requires docker, API key, and a prepared image",
  "bundle_ci: repo-owned official bundle validation entry points",
  "bundle_deep: non-blocking deep official bundle oracle probes",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
files = ["src"]
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["claude_agent_sdk", "docker", "docker.*", "swe_rex.*", "swerex.*"]
ignore_missing_imports = true

[tool.pyrefly]
python-version = "3.10"
project-includes = ["src/**/*.py", "tests/**/*.py"]
